2009-09-22  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Arek Korbik/Xavi Martinez

	* flumotion/common/errors.py:
	* flumotion/common/vfs.py:
	Improve exception handling.
	* flumotion/common/vfsgio.py:
	* flumotion/common/vfsgnome.py:
	* flumotion/component/misc/httpserver/admin_gtk.py:
	Add Ondemand browser tab to admin.
	* flumotion/component/misc/httpserver/httpserver.glade:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/component/misc/httpserver/httpserver.xml:
	Add allow-browsing property.
	* flumotion/scenario/steps/ondemandstep.py:
	* flumotion/ui/Makefile.am:
	* flumotion/ui/fileselector.py:
	Improve exception handling.
	* flumotion/ui/ondemandbrowser.py (added):
	New Ondemand browser widget.
	* flumotion/worker/medium.py:
	Improve docstring for remote_ListDirectory.
	Closes #1108.

2009-09-16  Alvin Delagon  <adelagon@flumotion.com>

	* flumotion/component/consumers/disker/Makefile.am:
	Adding status.glade to Makefile.am.

2009-09-16  Alvin Delagon  <adelagon@flumotion.com>

	reviewed by: Arek Korbik/Jan Urbanski

	* flumotion/component/consumers/disker/admin_gtk.py:
	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/consumers/disker/disker.xml:
	* flumotion/component/consumers/disker/status.glade:
	* flumotion/component/consumers/disker/status.glade (added):
	Show more information on the disker admin.
	Closes #1191.

2009-09-14  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	* doc/man/flumotion-worker.1:
	Corrects the syntax for -FPORTS

2009-09-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/as-version.m4:
	  Update to newer version so we can remove m4 ugliness from
	  configure.ac
	  This will probably need following up in the other modules too.
	* configure.ac:
	  Remove m4 ugliness.
	  Add bug location.
	* flumotion.spec.in:
	  Use new release tag variable.

2009-09-11  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
